# EmailTaskQueue

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: chronotostring.h  email_sender.h  job.h  queueable.h  randomhex.h  worker.h
src/: chronotostring.cpp  email_sender.cpp  job.cpp  main.cpp  queueable.cpp  randomhex.cpp  worker.cpp
